[gd_scene load_steps=4 format=3 uid="uid://01xjledkqy1p"]

[ext_resource type="Script" path="res://Scripts/optionsmenu.gd" id="1_qr04s"]
[ext_resource type="Theme" uid="uid://bi3bwqv4kgpoq" path="res://Themes/BasicButton.tres" id="2_0x6y1"]
[ext_resource type="PackedScene" uid="uid://bperdycqkw1e8" path="res://Scenes/bg_music.tscn" id="3_1f5sn"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qr04s")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 642.0
color = Color(0.313726, 0.384314, 0.447059, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -128.0
offset_right = 288.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Vol_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0x6y1")
min_value = -100.0

[node name="Mute_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Res_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "1152x648"
popup/item_0/id = 1
popup/item_1/text = "1920x1080"
popup/item_1/id = 0
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="Fullscreen_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("3_1f5sn")]

[node name="SettingsText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("2_0x6y1")
text = "Settings"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
